[gd_scene load_steps=4 format=3 uid="uid://player001"]

[ext_resource type="Script" uid="uid://bc3ve3f2wg5vy" path="res://entities/player/player.gd" id="1_player"]


[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_player"]
radius = 8.0
height = 48.0

[sub_resource type="Gradient" id="Gradient_glow"]
offsets = PackedFloat32Array(0, 0.5, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0.5, 1, 1, 1, 0)

[node name="Player" type="CharacterBody2D"]
collision_layer = 1
collision_mask = 1
script = ExtResource("1_player")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_player")

[node name="BodyParts" type="Node2D" parent="."]

[node name="Head" type="Line2D" parent="BodyParts"]
points = PackedVector2Array(-8, -20, 8, -20, 8, -12, -8, -12, -8, -20)
width = 4.0
default_color = Color(0, 1, 1, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="HeadDetail" type="Line2D" parent="BodyParts/Head"]
points = PackedVector2Array(-5, -17, -3, -17, -3, -15, -5, -15)
width = 2.0
default_color = Color(0.5, 1, 1, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="HeadDetail2" type="Line2D" parent="BodyParts/Head"]
points = PackedVector2Array(3, -17, 5, -17, 5, -15, 3, -15)
width = 2.0
default_color = Color(0.5, 1, 1, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="Torso" type="Line2D" parent="BodyParts"]
points = PackedVector2Array(0, -12, 0, 8)
width = 5.0
default_color = Color(0, 1, 1, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="TorsoDetail" type="Line2D" parent="BodyParts/Torso"]
points = PackedVector2Array(-3, -8, 3, -8)
width = 2.0
default_color = Color(0.5, 1, 1, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="ArmLeft" type="Line2D" parent="BodyParts"]
position = Vector2(0, -8)
points = PackedVector2Array(0, 0, -12, 8)
width = 4.0
default_color = Color(0, 1, 1, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="ArmRight" type="Line2D" parent="BodyParts"]
position = Vector2(0, -8)
points = PackedVector2Array(0, 0, 12, 8)
width = 4.0
default_color = Color(0, 1, 1, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="LegLeft" type="Line2D" parent="BodyParts"]
position = Vector2(-4, 8)
points = PackedVector2Array(0, 0, 0, 16)
width = 4.0
default_color = Color(0, 1, 1, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="LegRight" type="Line2D" parent="BodyParts"]
position = Vector2(4, 8)
points = PackedVector2Array(0, 0, 0, 16)
width = 4.0
default_color = Color(0, 1, 1, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="WeaponHolder" type="Node2D" parent="."]
position = Vector2(12, -4)

[node name="GlowEffect" type="PointLight2D" parent="."]
color = Color(0, 1, 1, 1)
energy = 1.5
shadow_enabled = true
texture_scale = 2.0
